--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Login</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="Login">
+            <div id="imagem">
+
+            </div>
+            <div id="formulario">
+                <h1>Login</h1>
+                <p>Seja bem vindo novamente. Faça login na sua conta para ter acesso ao ambiente.</p>
+                <form action="login.php" method="post">
+                    
+                </form>
+            </div>
+
+        </section>
+    </main>
 </body>
 </html>
