--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                          <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci-senha.html">
+                    <a class="button" href="esqueci-senha.html">
                         Esqueci a Senha <span class="material-symbols-outlined">mail</span>
                     </a>
                 </form>
